PDF plugin: Use fake progress on network slowdown.

Change-Id: Id71f850e5095a097048d1fa35d35f9e11a6f9717
Bug: 766046